# mycelia

./: .cursorrules  .dockerignore  .env.example  .gitignore  .local.http  DAEMON_IMPROVEMENTS.md  Dockerfile  LICENSE  README.md  TIMELINE_INCREMENTAL.md  TIMELINE_PROGRESS.md  cli.ts  cmd.ts  config.ts  cspell.json  deno.json  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  server.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
.gitea/workflows/: build.yaml
app/: config.ts  core.ts  entry.client.tsx  entry.server.tsx  mongo.ts  root.tsx  tailwind.css
app/components/: app-sidebar.tsx  cursorLine.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  (+2 more)
backend/: .env.example  .gitignore  Dockerfile  cli.ts  config.ts  deno.json  package.json  server.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
cli/: audio.ts  auth.ts  config.ts  mcp.ts  utils.ts
docs/: activitypub-ontology-design.md  crossfilter-buckets.md  curved-time-verticality.md  macrodata-refinement.md
friend/: CLAUDE.md  README.md
frontend/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  deno.json  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
python/: .gitignore  DISTRIBUTED_STT_SETUP.md  README.md  STT_IMPROVEMENTS.md  check_orphaned_chunks.py  chunking.py  cleanup.py  convos.py  daemon.py  deamon.py  diarization.py  discovery.py  manage_errors.py  prompts.yml  pyproject.toml  reset_orphaned_chunks.py  settings.example.py  settings.py  stt.py  topics.py  uploader.py  utils.py
python/lib/: __init__.py  api.py  config.py  hist.py  llm.py  resources.py  transcription.py
python/processors/: vad.py
python/recorder/: README.md  recorder.py
python/whisper_server/: pyproject.toml  server.py
scripts/: deploy.sh  jwt.ts  start-server-with-logs.sh
(+398 files in other folders)
