[project]
name = "mycelia"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.4",
    "ffmpeg-python>=0.2.0",
    "hdbscan>=0.8.40",
    "humanize>=4.13.0",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.0",
    "langgraph>=0.5.0",
    "langgraph-supervisor>=0.0.27",
    "lazy-object-proxy>=1.11.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "paramiko>=4.0.0",
    "pyaudio>=0.2.14",
    "pdbpp>=0.11.6",
    "pyannote-audio>=3.3.2",
    "pydantic>=2.11.4",
    "pydub>=0.25.1",
    "pymongo>=4.13.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.46.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "tqdm>=4.67.1",
]


[tool.ruff]
ignore = ["E402"]
